<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BotPeopleActivity"
    android:background="@color/bg_color">


    <!--Begin: Bot View-->

    <LinearLayout
        android:id="@+id/viewCardsBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/green_dracula"

        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"

        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:contentDescription="@string/imagecards1"
            app:srcCompat="@drawable/b1fv" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:contentDescription="@string/imagecards2"
            app:srcCompat="@drawable/b1fv" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:contentDescription="@string/imagecards3"
            app:srcCompat="@drawable/b1fv" />

    </LinearLayout>

    <TextView
        android:id="@+id/result_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_dracula"

        android:gravity="center"

        android:paddingBottom="10dp"
        android:text="@string/Ket_qua"
        android:textColor="@color/bg_color"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/viewCardsBot" />

    <!--End: Bot View-->

    <!--Begin: Score View-->
    <LinearLayout
        android:id="@+id/viewScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/result_bot">

        <TextView
            android:id="@+id/nameBot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bot"
            android:textColor="@color/green_dracula"
            android:textSize="40sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/scoreBotPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"

            android:text="0 - 0"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/namePeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You"
            android:textColor="@color/orange_dracula"
            android:textSize="40sp"
            android:textStyle="bold"

            />
    </LinearLayout>

    <!--End: Score View-->


    <!--Begin: People View-->
    <LinearLayout
        android:id="@+id/viewCardsPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/orange_dracula"
        android:gravity="center"

        android:paddingTop="30dp"
        android:paddingBottom="10dp"

        app:layout_constraintTop_toBottomOf="@id/viewScore">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:contentDescription="@string/imagecards1"
            app:srcCompat="@drawable/b1fv" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:contentDescription="@string/imagecards2"
            app:srcCompat="@drawable/b1fv" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:contentDescription="@string/imagecards3"
            app:srcCompat="@drawable/b1fv" />

    </LinearLayout>

    <TextView
        android:id="@+id/result_people"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_dracula"

        android:gravity="center"

        android:paddingBottom="10dp"
        android:text="@string/Ket_qua"
        android:textColor="@color/bg_color"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/viewCardsPeople" />
    <!--End: People View-->

    <TextView
        android:id="@+id/tv_timesPlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:gravity="center"

        app:layout_constraintTop_toBottomOf="@+id/result_people"
        android:layout_marginTop="16dp"
        />

    <Button
        android:id="@+id/btnRutBai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="32dp"

        android:layout_marginTop="4dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/cyan_dracula"

        android:paddingTop="16dp"
        android:paddingBottom="16dp"

        android:text="@string/rut_3_la_ngau_nhien"
        android:textColor="@color/bg_color"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_timesPlay" />

</androidx.constraintlayout.widget.ConstraintLayout>